--- a/iis-project/react/package.json
+++ b/iis-project/react/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host=localhost --port=3000",
+    "dev": "vite --host=100.64.217.131 --port=3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
