--- a/iis-project/react/package.json
+++ b/iis-project/react/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-time-picker": "^6.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
