--- a/iis-project/react/package.json
+++ b/iis-project/react/package.json
@@ -20,8 +20,10 @@
     "react-bootstrap-time-picker": "^2.0.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
-    "react-time-picker": "^6.5.2"
+    "react-time-picker": "^6.5.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
